@@ -1,120 +1,60 @@
 # Testing Overview
 
-Comprehensive testing is fundamental to maintaining OpenFrame OSS Library's reliability and enabling confident development. This guide covers the testing philosophy, structure, tools, and practices used throughout the project.
+OpenFrame OSS Library follows a comprehensive testing strategy to ensure code quality, reliability, and maintainability. This guide covers our testing approach, tools, and best practices for building robust applications.
 
-## 🎯 Testing Philosophy
+## Testing Strategy
 
-OpenFrame follows a **test-driven development (TDD)** approach with emphasis on:
-
-- **Reliability**: High confidence in code changes through comprehensive test coverage
-- **Maintainability**: Tests serve as living documentation of system behavior
-- **Performance**: Tests validate performance characteristics and prevent regressions
-- **Security**: Testing security patterns and validation rules
-
-### Testing Pyramid
+### Test Pyramid
 
 ```mermaid
-graph TD
-    subgraph "Testing Pyramid"
-        E2E["End-to-End Tests<br/>5-10%<br/>Full system integration"]
-        Integration["Integration Tests<br/>20-30%<br/>Component interaction"]
-        Unit["Unit Tests<br/>60-70%<br/>Individual components"]
+graph TB
+    subgraph "Test Pyramid"
+        E2E[End-to-End Tests<br/>Few, Slow, High Confidence]
+        INTEGRATION[Integration Tests<br/>Some, Medium Speed, Good Coverage]
+        UNIT[Unit Tests<br/>Many, Fast, Detailed Coverage]
     end
     
-    subgraph "Test Types"
-        Manual["Manual Testing<br/>Exploratory & UAT"]
-        Perf["Performance Tests<br/>Load & stress testing"]
-        Security["Security Tests<br/>Authentication & authorization"]
-    end
-    
-    Unit --> Integration
-    Integration --> E2E
-    
-    Manual -.-> E2E
-    Perf -.-> Integration
-    Security -.-> Unit
-    
-    style Unit fill:#e8f5e8
-    style Integration fill:#e1f5fe
-    style E2E fill:#f3e5f5
+    E2E --> |5-10%| API_TESTS[API Contract Tests<br/>Postman/Newman]
+    INTEGRATION --> |20-30%| SERVICE_TESTS[Service Integration<br/>@SpringBootTest]
+    UNIT --> |60-70%| LOGIC_TESTS[Business Logic<br/>@Test, @MockBean]
 ```
 
-## 📁 Test Structure and Organization
+### Testing Levels & Coverage
 
-### Directory Structure
+| Test Level | Coverage Target | Speed | Confidence | Tools |
+|------------|----------------|-------|------------|-------|
+| **Unit Tests** | 80%+ line coverage | Fast (<1s) | High for logic | JUnit 5, Mockito |
+| **Integration Tests** | 70%+ service paths | Medium (5-30s) | High for flows | TestContainers, @SpringBootTest |
+| **API Tests** | 90%+ endpoints | Slow (30s+) | High for contracts | RestAssured, WireMock |
+| **End-to-End** | Critical user journeys | Very Slow (minutes) | Highest | Selenium, Playwright |
 
-```text
-openframe-oss-lib/
-├── openframe-api-lib/
-│   └── src/
-│       └── test/java/com/openframe/api/
-│           ├── dto/                     # DTO validation tests
-│           │   ├── device/
-│           │   ├── event/
-│           │   └── organization/
-│           ├── service/                 # Service interface tests
-│           └── validation/              # Custom validation tests
-├── openframe-api-service-core/
-│   └── src/
-│       └── test/java/com/openframe/api/
-│           ├── controller/              # Controller integration tests
-│           ├── service/                 # Service implementation tests
-│           ├── integration/             # Full integration tests
-│           └── testconfig/              # Test configurations
-├── openframe-data-mongo/
-│   └── src/
-│       └── test/java/com/openframe/data/
-│           ├── repository/              # Repository tests
-│           ├── document/                # Entity tests
-│           └── integration/             # Database integration tests
-└── test-resources/
-    ├── test-data/                       # Sample test data
-    ├── test-containers/                 # Docker test configurations
-    └── fixtures/                       # Test fixtures and utilities
-```
+## Unit Testing
 
-### Test Categories
+### JUnit 5 & Mockito Setup
 
-| Category | Purpose | Location | Tools |
-|----------|---------|----------|--------|
-| **Unit Tests** | Test individual methods/classes | `src/test/java/**/*Test.java` | JUnit 5, Mockito |
-| **Integration Tests** | Test component interactions | `src/test/java/**/integration/` | Spring Boot Test, TestContainers |
-| **Repository Tests** | Test data layer operations | `src/test/java/**/repository/` | Spring Data Test, MongoDB Test |
-| **Controller Tests** | Test API endpoints | `src/test/java/**/controller/` | MockMvc, WebTestClient |
-| **Performance Tests** | Test system performance | `src/test/java/**/performance/` | JMH, custom utilities |
-
-## 🧪 Unit Testing
-
-### Testing Framework Stack
-
+**Maven Dependencies:**
 ```xml
-<!-- Core testing dependencies -->
 <dependencies>
-    <!-- JUnit 5 -->
-    <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <scope>test</scope>
-    </dependency>
-    
-    <!-- Mockito for mocking -->
-    <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <scope>test</scope>
-    </dependency>
-    
-    <!-- AssertJ for fluent assertions -->
-    <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <scope>test</scope>
-    </dependency>
-    
-    <!-- Spring Boot Test -->
+    <!-- Spring Boot Test Starter -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
+        <scope>test</scope>
+    </dependency>
+    
+    <!-- TestContainers for Integration Tests -->
+    <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>1.19.3</version>
+        <type>pom</type>
+        <scope>import</scope>
+    </dependency>
+    
+    <!-- Mockito for Mocking -->
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
         <scope>test</scope>
     </dependency>
 </dependencies>
@@ -122,137 +62,98 @@ openframe-oss-lib/
 
 ### Unit Test Examples
 
-**Testing DTOs and Validation**
-```java
-@DisplayName("CursorPaginationInput Tests")
-class CursorPaginationInputTest {
-    
-    private Validator validator;
-    
-    @BeforeEach
-    void setUp() {
-        ValidatorFactory factory = Validation.buildDefaultValidatorFactory();
-        validator = factory.getValidator();
-    }
-    
-    @Test
-    @DisplayName("Should validate successful with valid input")
-    void shouldValidateSuccessfullyWithValidInput() {
-        // Given
-        CursorPaginationInput pagination = CursorPaginationInput.builder()
-            .limit(25)
-            .cursor("valid-cursor-token")
-            .build();
-        
-        // When
-        Set<ConstraintViolation<CursorPaginationInput>> violations = validator.validate(pagination);
-        
-        // Then
-        assertThat(violations).isEmpty();
-        assertThat(pagination.getLimit()).isEqualTo(25);
-        assertThat(pagination.getCursor()).isEqualTo("valid-cursor-token");
-    }
-    
-    @ParameterizedTest
-    @ValueSource(ints = {0, -1, 101, 200})
-    @DisplayName("Should reject invalid limit values")
-    void shouldRejectInvalidLimitValues(int invalidLimit) {
-        // Given
-        CursorPaginationInput pagination = CursorPaginationInput.builder()
-            .limit(invalidLimit)
-            .cursor("valid-cursor")
-            .build();
-        
-        // When
-        Set<ConstraintViolation<CursorPaginationInput>> violations = validator.validate(pagination);
-        
-        // Then
-        assertThat(violations)
-            .hasSize(1)
-            .extracting(ConstraintViolation::getMessage)
-            .containsAnyOf(
-                "Limit must be at least 1",
-                "Limit cannot exceed 100"
-            );
-    }
-}
-```
+#### Service Layer Testing
 
-**Testing Service Layer**
 ```java
 @ExtendWith(MockitoExtension.class)
-@DisplayName("DeviceService Implementation Tests")
-class DeviceServiceImplTest {
+class DeviceServiceTest {
     
     @Mock
     private DeviceRepository deviceRepository;
     
     @Mock
-    private DeviceMapper deviceMapper;
-    
-    @Mock
-    private OrganizationService organizationService;
+    private EventService eventService;
     
     @InjectMocks
-    private DeviceServiceImpl deviceService;
+    private DeviceService deviceService;
     
     @Test
-    @DisplayName("Should find devices with filters successfully")
-    void shouldFindDevicesWithFiltersSuccessfully() {
+    @DisplayName("Should create device and publish event")
+    void shouldCreateDeviceAndPublishEvent() {
         // Given
-        DeviceFilterInput filterInput = createValidDeviceFilterInput();
-        Page<DeviceDocument> mockPage = createMockDevicePage();
-        List<Device> expectedDevices = createExpectedDevices();
+        String organizationId = "org-123";
+        Device device = createTestDevice(organizationId);
+        Device savedDevice = createTestDevice(organizationId);
+        savedDevice.setId("device-123");
         
-        when(deviceMapper.toQueryFilter(filterInput)).thenReturn(new DeviceQueryFilter());
-        when(deviceRepository.findDevicesWithFilters(any())).thenReturn(mockPage);
-        when(deviceMapper.toDeviceList(mockPage.getContent())).thenReturn(expectedDevices);
+        when(deviceRepository.save(any(Device.class)))
+            .thenReturn(savedDevice);
         
         // When
-        CountedGenericQueryResult<Device> result = deviceService.findDevices(filterInput);
+        Device result = deviceService.createDevice(device);
         
         // Then
         assertThat(result).isNotNull();
-        assertThat(result.getItems()).hasSize(2);
-        assertThat(result.getTotalCount()).isEqualTo(10L);
-        assertThat(result.getPageInfo().getHasNextPage()).isTrue();
+        assertThat(result.getId()).isEqualTo("device-123");
         
-        verify(deviceRepository).findDevicesWithFilters(any());
-        verify(deviceMapper).toDeviceList(mockPage.getContent());
+        verify(deviceRepository).save(device);
+        verify(eventService).publishEvent(
+            eq(EventType.DEVICE_CREATED),
+            eq(savedDevice.getId()),
+            any(Map.class)
+        );
     }
     
     @Test
-    @DisplayName("Should throw exception for null filter input")
-    void shouldThrowExceptionForNullFilterInput() {
-        // When & Then
-        assertThatThrownBy(() -> deviceService.findDevices(null))
-            .isInstanceOf(IllegalArgumentException.class)
-            .hasMessage("Device filter input cannot be null");
+    @DisplayName("Should throw exception when device not found")
+    void shouldThrowExceptionWhenDeviceNotFound() {
+        // Given
+        String deviceId = "non-existent";
+        when(deviceRepository.findById(deviceId))
+            .thenReturn(Optional.empty());
         
-        verifyNoInteractions(deviceRepository);
+        // When & Then
+        assertThrows(DeviceNotFoundException.class, () -> 
+            deviceService.getDevice(deviceId)
+        );
     }
     
-    private DeviceFilterInput createValidDeviceFilterInput() {
-        return DeviceFilterInput.builder()
-            .pagination(CursorPaginationInput.builder()
-                .limit(10)
-                .build())
-            .filters(DeviceFilters.builder().build())
-            .build();
+    @Test
+    @DisplayName("Should validate device before saving")
+    void shouldValidateDeviceBeforeSaving() {
+        // Given
+        Device invalidDevice = new Device();
+        // Missing required fields
+        
+        // When & Then
+        assertThrows(ValidationException.class, () -> 
+            deviceService.createDevice(invalidDevice)
+        );
+        
+        verify(deviceRepository, never()).save(any());
+    }
+    
+    private Device createTestDevice(String organizationId) {
+        Device device = new Device();
+        device.setMachineId("test-machine-001");
+        device.setOrganizationId(organizationId);
+        device.setSerialNumber("TEST123456");
+        device.setModel("Test Device Model");
+        device.setType(DeviceType.DESKTOP);
+        device.setStatus(DeviceStatus.ACTIVE);
+        return device;
     }
 }
 ```
 
-## 🔗 Integration Testing
-
-Integration tests verify that components work correctly together, especially focusing on database operations and API interactions.
-
-### Repository Integration Tests
+#### Repository Layer Testing
 
 ```java
 @DataMongoTest
-@DisplayName("Device Repository Integration Tests")
-class DeviceRepositoryIntegrationTest {
+@TestPropertySource(properties = {
+    "spring.data.mongodb.database=test_db"
+})
+class DeviceRepositoryTest {
     
     @Autowired
     private TestEntityManager entityManager;
@@ -260,81 +161,155 @@ class DeviceRepositoryIntegrationTest {
     @Autowired
     private DeviceRepository deviceRepository;
     
+    @BeforeEach
+    void setUp() {
+        // Clean database before each test
+        deviceRepository.deleteAll();
+    }
+    
     @Test
     @DisplayName("Should find devices by organization ID")
     void shouldFindDevicesByOrganizationId() {
         // Given
-        String orgId = "test-org-123";
-        Device device1 = createTestDevice("device-1", orgId);
-        Device device2 = createTestDevice("device-2", orgId);
-        Device deviceOtherOrg = createTestDevice("device-3", "other-org");
+        String orgId = "org-123";
+        Device device1 = createTestDevice(orgId, "device-1");
+        Device device2 = createTestDevice(orgId, "device-2");
+        Device otherOrgDevice = createTestDevice("org-456", "device-3");
         
-        entityManager.persistAndFlush(device1);
-        entityManager.persistAndFlush(device2);
-        entityManager.persistAndFlush(deviceOtherOrg);
-        
-        Pageable pageable = PageRequest.of(0, 10);
+        deviceRepository.saveAll(List.of(device1, device2, otherOrgDevice));
         
         // When
-        Page<Device> result = deviceRepository.findByOrganizationId(orgId, pageable);
+        List<Device> result = deviceRepository.findByOrganizationId(orgId);
         
         // Then
-        assertThat(result.getContent()).hasSize(2);
-        assertThat(result.getContent())
-            .extracting(Device::getOrganizationId)
-            .containsOnly(orgId);
+        assertThat(result).hasSize(2);
+        assertThat(result).extracting(Device::getOrganizationId)
+                         .allMatch(id -> id.equals(orgId));
     }
     
     @Test
-    @DisplayName("Should find devices by status and type")
-    void shouldFindDevicesByStatusAndType() {
+    @DisplayName("Should find active devices only")
+    void shouldFindActiveDevicesOnly() {
         // Given
-        Device onlineDesktop = createTestDevice("desktop-1", DeviceStatus.ONLINE, DeviceType.DESKTOP);
-        Device onlineServer = createTestDevice("server-1", DeviceStatus.ONLINE, DeviceType.SERVER);
-        Device offlineDesktop = createTestDevice("desktop-2", DeviceStatus.OFFLINE, DeviceType.DESKTOP);
+        String orgId = "org-123";
+        Device activeDevice = createTestDevice(orgId, "active");
+        activeDevice.setStatus(DeviceStatus.ACTIVE);
         
-        entityManager.persistAndFlush(onlineDesktop);
-        entityManager.persistAndFlush(onlineServer);
-        entityManager.persistAndFlush(offlineDesktop);
+        Device offlineDevice = createTestDevice(orgId, "offline");
+        offlineDevice.setStatus(DeviceStatus.OFFLINE);
+        
+        deviceRepository.saveAll(List.of(activeDevice, offlineDevice));
         
         // When
-        List<Device> result = deviceRepository.findByStatusAndDeviceType(
-            DeviceStatus.ONLINE, DeviceType.DESKTOP);
+        List<Device> result = deviceRepository.findByOrganizationIdAndStatus(
+            orgId, DeviceStatus.ACTIVE
+        );
         
         // Then
-        assertThat(result)
-            .hasSize(1)
-            .first()
-            .satisfies(device -> {
-                assertThat(device.getStatus()).isEqualTo(DeviceStatus.ONLINE);
-                assertThat(device.getDeviceType()).isEqualTo(DeviceType.DESKTOP);
-            });
+        assertThat(result).hasSize(1);
+        assertThat(result.get(0).getStatus()).isEqualTo(DeviceStatus.ACTIVE);
     }
     
-    private Device createTestDevice(String name, String organizationId) {
-        return Device.builder()
-            .name(name)
-            .organizationId(organizationId)
-            .status(DeviceStatus.ONLINE)
-            .deviceType(DeviceType.DESKTOP)
-            .createdAt(LocalDateTime.now())
-            .updatedAt(LocalDateTime.now())
-            .build();
+    @Test
+    @DisplayName("Should implement cursor pagination correctly")
+    void shouldImplementCursorPaginationCorrectly() {
+        // Given - Create 5 devices
+        String orgId = "org-123";
+        List<Device> devices = IntStream.range(1, 6)
+            .mapToObj(i -> createTestDevice(orgId, "device-" + i))
+            .collect(Collectors.toList());
+        
+        deviceRepository.saveAll(devices);
+        
+        // When - Get first page
+        Pageable pageable = PageRequest.of(0, 2, Sort.by("id"));
+        Page<Device> firstPage = deviceRepository.findByOrganizationId(orgId, pageable);
+        
+        // Then
+        assertThat(firstPage.getContent()).hasSize(2);
+        assertThat(firstPage.hasNext()).isTrue();
+        assertThat(firstPage.getTotalElements()).isEqualTo(5);
     }
 }
 ```
 
-### API Integration Tests
+#### DTO and Mapper Testing
+
+```java
+class DeviceMapperTest {
+    
+    private DeviceMapper mapper = DeviceMapper.INSTANCE;
+    
+    @Test
+    @DisplayName("Should map device entity to response DTO")
+    void shouldMapDeviceEntityToResponseDto() {
+        // Given
+        Device device = createTestDevice();
+        device.setId("device-123");
+        device.setLastCheckin(Instant.now());
+        
+        // When
+        DeviceResponse response = mapper.toResponse(device);
+        
+        // Then
+        assertThat(response).isNotNull();
+        assertThat(response.getId()).isEqualTo(device.getId());
+        assertThat(response.getMachineId()).isEqualTo(device.getMachineId());
+        assertThat(response.getSerialNumber()).isEqualTo(device.getSerialNumber());
+        assertThat(response.getStatus()).isEqualTo(device.getStatus().name());
+        assertThat(response.getLastCheckin()).isEqualTo(device.getLastCheckin());
+    }
+    
+    @Test
+    @DisplayName("Should map create request to device entity")
+    void shouldMapCreateRequestToDeviceEntity() {
+        // Given
+        CreateDeviceRequest request = new CreateDeviceRequest();
+        request.setMachineId("test-machine");
+        request.setSerialNumber("SN123456");
+        request.setModel("Test Model");
+        request.setType("DESKTOP");
+        
+        // When
+        Device device = mapper.fromCreateRequest(request);
+        
+        // Then
+        assertThat(device).isNotNull();
+        assertThat(device.getMachineId()).isEqualTo(request.getMachineId());
+        assertThat(device.getSerialNumber()).isEqualTo(request.getSerialNumber());
+        assertThat(device.getModel()).isEqualTo(request.getModel());
+        assertThat(device.getType()).isEqualTo(DeviceType.DESKTOP);
+    }
+    
+    @Test
+    @DisplayName("Should handle null values gracefully")
+    void shouldHandleNullValuesGracefully() {
+        // When
+        DeviceResponse response = mapper.toResponse(null);
+        
+        // Then
+        assertThat(response).isNull();
+    }
+}
+```
+
+## Integration Testing
+
+### Spring Boot Test Configuration
 
 ```java
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+@TestPropertySource(locations = "classpath:application-integration.yml")
 @Testcontainers
-@DisplayName("Device API Integration Tests")
-class DeviceControllerIntegrationTest {
+class DeviceIntegrationTest {
     
     @Container
-    static MongoDBContainer mongoDBContainer = new MongoDBContainer("mongo:7")
-            .withExposedPorts(27017);
+    static MongoDBContainer mongoDBContainer = new MongoDBContainer("mongo:7.0")
+            .withDatabaseName("integration_test_db");
+    
+    @Container
+    static GenericContainer<?> redisContainer = new GenericContainer<>("redis:7.0")
+            .withExposedPorts(6379);
     
     @Autowired
     private TestRestTemplate restTemplate;
@@ -342,245 +317,511 @@ class DeviceControllerIntegrationTest {
     @Autowired
     private DeviceRepository deviceRepository;
     
+    @LocalServerPort
+    private int port;
+    
+    private String baseUrl;
+    
     @DynamicPropertySource
     static void configureProperties(DynamicPropertyRegistry registry) {
         registry.add("spring.data.mongodb.uri", mongoDBContainer::getReplicaSetUrl);
+        registry.add("spring.data.redis.host", redisContainer::getHost);
+        registry.add("spring.data.redis.port", redisContainer::getFirstMappedPort);
+    }
+    
+    @BeforeEach
+    void setUp() {
+        baseUrl = "http://localhost:" + port + "/api";
+        deviceRepository.deleteAll();
     }
     
     @Test
-    @DisplayName("Should get devices with pagination")
-    void shouldGetDevicesWithPagination() {
+    @DisplayName("Should create device through API")
+    void shouldCreateDeviceThroughApi() {
         // Given
-        String orgId = "test-org";
-        createTestDevices(orgId, 25); // Create 25 test devices
-        
-        String url = "/api/devices?limit=10&organizationId=" + orgId;
-        
-        // When
-        ResponseEntity<DevicesResponse> response = restTemplate.getForEntity(url, DevicesResponse.class);
-        
-        // Then
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).isNotNull();
-        
-        DevicesResponse devicesResponse = response.getBody();
-        assertThat(devicesResponse.getItems()).hasSize(10);
-        assertThat(devicesResponse.getTotalCount()).isEqualTo(25);
-        assertThat(devicesResponse.getPageInfo().getHasNextPage()).isTrue();
-        assertThat(devicesResponse.getPageInfo().getNextCursor()).isNotNull();
-    }
-    
-    @Test
-    @DisplayName("Should create device successfully")
-    void shouldCreateDeviceSuccessfully() {
-        // Given
-        CreateDeviceRequest request = CreateDeviceRequest.builder()
-            .name("Test Device")
-            .deviceType(DeviceType.DESKTOP)
-            .organizationId("test-org")
-            .build();
+        CreateDeviceRequest request = new CreateDeviceRequest();
+        request.setMachineId("integration-test-machine");
+        request.setSerialNumber("INT123456");
+        request.setModel("Integration Test Device");
+        request.setType("LAPTOP");
         
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setBearerAuth(createTestJwtToken());
+        
         HttpEntity<CreateDeviceRequest> entity = new HttpEntity<>(request, headers);
         
         // When
         ResponseEntity<DeviceResponse> response = restTemplate.postForEntity(
-            "/api/devices", entity, DeviceResponse.class);
+            baseUrl + "/devices",
+            entity,
+            DeviceResponse.class
+        );
         
         // Then
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
         assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getMachineId()).isEqualTo(request.getMachineId());
         
-        DeviceResponse deviceResponse = response.getBody();
-        assertThat(deviceResponse.getName()).isEqualTo("Test Device");
-        assertThat(deviceResponse.getDeviceType()).isEqualTo(DeviceType.DESKTOP);
-        
-        // Verify device was persisted
-        Optional<Device> persistedDevice = deviceRepository.findById(deviceResponse.getId());
-        assertThat(persistedDevice).isPresent();
+        // Verify device was saved in database
+        Optional<Device> savedDevice = deviceRepository.findByMachineId(request.getMachineId());
+        assertThat(savedDevice).isPresent();
     }
     
-    private void createTestDevices(String organizationId, int count) {
-        List<Device> devices = IntStream.range(0, count)
-            .mapToObj(i -> Device.builder()
-                .name("Test Device " + i)
-                .organizationId(organizationId)
-                .status(DeviceStatus.ONLINE)
-                .deviceType(DeviceType.DESKTOP)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
-                .build())
+    @Test
+    @DisplayName("Should return 404 for non-existent device")
+    void shouldReturn404ForNonExistentDevice() {
+        // Given
+        String deviceId = "non-existent-device";
+        
+        HttpHeaders headers = new HttpHeaders();
+        headers.setBearerAuth(createTestJwtToken());
+        HttpEntity<Void> entity = new HttpEntity<>(headers);
+        
+        // When
+        ResponseEntity<ErrorResponse> response = restTemplate.exchange(
+            baseUrl + "/devices/" + deviceId,
+            HttpMethod.GET,
+            entity,
+            ErrorResponse.class
+        );
+        
+        // Then
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getError().getCode()).isEqualTo("DEVICE_NOT_FOUND");
+    }
+    
+    @Test
+    @DisplayName("Should implement pagination correctly")
+    void shouldImplementPaginationCorrectly() {
+        // Given - Create multiple devices
+        String orgId = "test-org-123";
+        List<Device> devices = IntStream.range(1, 26) // 25 devices
+            .mapToObj(i -> createTestDevice(orgId, "device-" + String.format("%02d", i)))
             .collect(Collectors.toList());
         
         deviceRepository.saveAll(devices);
+        
+        HttpHeaders headers = new HttpHeaders();
+        headers.setBearerAuth(createTestJwtToken(orgId));
+        HttpEntity<Void> entity = new HttpEntity<>(headers);
+        
+        // When - Get first page
+        ResponseEntity<DevicePageResponse> response = restTemplate.exchange(
+            baseUrl + "/devices?limit=10",
+            HttpMethod.GET,
+            entity,
+            DevicePageResponse.class
+        );
+        
+        // Then
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).isNotNull();
+        assertThat(response.getBody().getData()).hasSize(10);
+        assertThat(response.getBody().getPagination().getHasNext()).isTrue();
+        assertThat(response.getBody().getMeta().getTotal()).isEqualTo(25);
+    }
+    
+    private String createTestJwtToken() {
+        return createTestJwtToken("test-org-123");
+    }
+    
+    private String createTestJwtToken(String organizationId) {
+        // Create test JWT token for integration tests
+        return jwtTestHelper.createToken(organizationId, "test-user", List.of("ADMIN"));
     }
 }
 ```
 
-## 🧩 Testing Utilities and Fixtures
+### Database Integration Testing
+
+#### TestContainers Configuration
+
+```java
+@TestConfiguration
+public class TestContainerConfiguration {
+    
+    @Bean
+    @Primary
+    public MongoDBContainer mongoDBContainer() {
+        MongoDBContainer container = new MongoDBContainer("mongo:7.0")
+            .withDatabaseName("openframe_test")
+            .withUsername("test")
+            .withPassword("test");
+        
+        container.start();
+        return container;
+    }
+    
+    @Bean
+    @Primary  
+    public GenericContainer<?> redisContainer() {
+        GenericContainer<?> container = new GenericContainer<>("redis:7.0-alpine")
+            .withExposedPorts(6379);
+            
+        container.start();
+        return container;
+    }
+}
+```
+
+#### Custom Test Slices
+
+```java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@SpringBootTest
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
+@Testcontainers
+public @interface OpenFrameIntegrationTest {
+}
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@DataMongoTest
+@Import(TestContainerConfiguration.class)
+public @interface OpenFrameRepositoryTest {
+}
+```
+
+## API Testing
+
+### REST Assured Configuration
+
+```java
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+@TestMethodOrder(OrderAnnotation.class)
+class DeviceApiTest {
+    
+    @LocalServerPort
+    private int port;
+    
+    private RequestSpecification requestSpec;
+    
+    @BeforeEach
+    void setUp() {
+        RestAssured.port = port;
+        RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
+        
+        requestSpec = new RequestSpecBuilder()
+            .setContentType(ContentType.JSON)
+            .setAccept(ContentType.JSON)
+            .addHeader("Authorization", "Bearer " + createTestToken())
+            .build();
+    }
+    
+    @Test
+    @Order(1)
+    @DisplayName("API: Create Device - Success")
+    void createDevice_Success() {
+        CreateDeviceRequest request = new CreateDeviceRequest();
+        request.setMachineId("api-test-machine");
+        request.setSerialNumber("API123456");
+        request.setModel("API Test Device");
+        request.setType("DESKTOP");
+        
+        given()
+            .spec(requestSpec)
+            .body(request)
+        .when()
+            .post("/api/devices")
+        .then()
+            .statusCode(HttpStatus.CREATED.value())
+            .body("success", equalTo(true))
+            .body("data.machineId", equalTo(request.getMachineId()))
+            .body("data.serialNumber", equalTo(request.getSerialNumber()))
+            .body("data.type", equalTo(request.getType()))
+            .body("data.id", notNullValue())
+            .body("data.createdAt", notNullValue());
+    }
+    
+    @Test
+    @Order(2)
+    @DisplayName("API: Get Device - Success")
+    void getDevice_Success() {
+        // First create a device
+        String deviceId = createTestDevice();
+        
+        given()
+            .spec(requestSpec)
+        .when()
+            .get("/api/devices/{id}", deviceId)
+        .then()
+            .statusCode(HttpStatus.OK.value())
+            .body("success", equalTo(true))
+            .body("data.id", equalTo(deviceId))
+            .body("data.machineId", notNullValue())
+            .body("data.status", notNullValue());
+    }
+    
+    @Test
+    @DisplayName("API: Get Device - Not Found")
+    void getDevice_NotFound() {
+        given()
+            .spec(requestSpec)
+        .when()
+            .get("/api/devices/{id}", "non-existent-id")
+        .then()
+            .statusCode(HttpStatus.NOT_FOUND.value())
+            .body("success", equalTo(false))
+            .body("error.code", equalTo("DEVICE_NOT_FOUND"))
+            .body("error.message", containsString("not found"));
+    }
+    
+    @Test
+    @DisplayName("API: List Devices - Pagination")
+    void listDevices_Pagination() {
+        // Create multiple devices
+        for (int i = 1; i <= 15; i++) {
+            createTestDevice("test-device-" + i);
+        }
+        
+        given()
+            .spec(requestSpec)
+            .queryParam("limit", 10)
+        .when()
+            .get("/api/devices")
+        .then()
+            .statusCode(HttpStatus.OK.value())
+            .body("success", equalTo(true))
+            .body("data.size()", equalTo(10))
+            .body("pagination.hasNext", equalTo(true))
+            .body("pagination.cursor", notNullValue())
+            .body("meta.total", greaterThanOrEqualTo(15));
+    }
+    
+    @Test
+    @DisplayName("API: Update Device Status")
+    void updateDeviceStatus() {
+        String deviceId = createTestDevice();
+        
+        UpdateDeviceStatusRequest request = new UpdateDeviceStatusRequest();
+        request.setStatus("OFFLINE");
+        
+        given()
+            .spec(requestSpec)
+            .body(request)
+        .when()
+            .patch("/api/devices/{id}/status", deviceId)
+        .then()
+            .statusCode(HttpStatus.OK.value())
+            .body("success", equalTo(true))
+            .body("data.status", equalTo("OFFLINE"));
+    }
+    
+    @Test
+    @DisplayName("API: Validation Errors")
+    void createDevice_ValidationErrors() {
+        CreateDeviceRequest request = new CreateDeviceRequest();
+        // Missing required fields
+        
+        given()
+            .spec(requestSpec)
+            .body(request)
+        .when()
+            .post("/api/devices")
+        .then()
+            .statusCode(HttpStatus.BAD_REQUEST.value())
+            .body("success", equalTo(false))
+            .body("error.code", equalTo("VALIDATION_ERROR"))
+            .body("error.details", not(empty()));
+    }
+    
+    private String createTestDevice() {
+        return createTestDevice("test-machine-" + UUID.randomUUID());
+    }
+    
+    private String createTestDevice(String machineId) {
+        CreateDeviceRequest request = new CreateDeviceRequest();
+        request.setMachineId(machineId);
+        request.setSerialNumber("TEST" + System.currentTimeMillis());
+        request.setModel("Test Device");
+        request.setType("DESKTOP");
+        
+        return given()
+            .spec(requestSpec)
+            .body(request)
+        .when()
+            .post("/api/devices")
+        .then()
+            .statusCode(HttpStatus.CREATED.value())
+            .extract()
+            .path("data.id");
+    }
+}
+```
+
+## Test Data Management
 
 ### Test Data Builders
 
 ```java
-@UtilityClass
 public class DeviceTestDataBuilder {
     
-    public Device.DeviceBuilder defaultDevice() {
-        return Device.builder()
-            .name("Test Device")
-            .organizationId("test-org-123")
-            .status(DeviceStatus.ONLINE)
-            .deviceType(DeviceType.DESKTOP)
-            .tags(Arrays.asList("test", "development"))
-            .createdAt(LocalDateTime.now())
-            .updatedAt(LocalDateTime.now());
+    private Device device;
+    
+    public DeviceTestDataBuilder() {
+        this.device = new Device();
+        // Set sensible defaults
+        this.device.setMachineId("test-machine-" + UUID.randomUUID());
+        this.device.setSerialNumber("TEST" + System.currentTimeMillis());
+        this.device.setModel("Test Device Model");
+        this.device.setType(DeviceType.DESKTOP);
+        this.device.setStatus(DeviceStatus.ACTIVE);
+        this.device.setOrganizationId("test-org-123");
+        this.device.setLastCheckin(Instant.now());
     }
     
-    public Device onlineDesktop(String name, String organizationId) {
-        return defaultDevice()
-            .name(name)
-            .organizationId(organizationId)
-            .deviceType(DeviceType.DESKTOP)
-            .status(DeviceStatus.ONLINE)
-            .build();
+    public static DeviceTestDataBuilder aDevice() {
+        return new DeviceTestDataBuilder();
     }
     
-    public Device offlineServer(String name, String organizationId) {
-        return defaultDevice()
-            .name(name)
-            .organizationId(organizationId)
-            .deviceType(DeviceType.SERVER)
-            .status(DeviceStatus.OFFLINE)
-            .build();
+    public DeviceTestDataBuilder withMachineId(String machineId) {
+        this.device.setMachineId(machineId);
+        return this;
     }
     
-    public List<Device> createDevices(String organizationId, int count) {
-        return IntStream.range(0, count)
-            .mapToObj(i -> defaultDevice()
-                .name("Device " + i)
-                .organizationId(organizationId)
-                .build())
-            .collect(Collectors.toList());
+    public DeviceTestDataBuilder withOrganizationId(String organizationId) {
+        this.device.setOrganizationId(organizationId);
+        return this;
     }
+    
+    public DeviceTestDataBuilder withType(DeviceType type) {
+        this.device.setType(type);
+        return this;
+    }
+    
+    public DeviceTestDataBuilder withStatus(DeviceStatus status) {
+        this.device.setStatus(status);
+        return this;
+    }
+    
+    public DeviceTestDataBuilder offline() {
+        this.device.setStatus(DeviceStatus.OFFLINE);
+        this.device.setLastCheckin(Instant.now().minus(1, ChronoUnit.HOURS));
+        return this;
+    }
+    
+    public DeviceTestDataBuilder laptop() {
+        this.device.setType(DeviceType.LAPTOP);
+        this.device.setModel("Test Laptop Model");
+        return this;
+    }
+    
+    public Device build() {
+        return this.device;
+    }
+    
+    // Usage example:
+    // Device device = aDevice()
+    //     .withOrganizationId("org-123")
+    //     .laptop()
+    //     .offline()
+    //     .build();
 }
 ```
 
-### Test Configuration
+### Test Fixtures
 
 ```java
-@TestConfiguration
-public class TestConfig {
+@Component
+@TestProfile
+public class TestDataFixtures {
     
-    @Bean
-    @Primary
-    public Clock testClock() {
-        return Clock.fixed(Instant.parse("2024-01-15T10:00:00Z"), ZoneOffset.UTC);
+    @Autowired
+    private DeviceRepository deviceRepository;
+    
+    @Autowired
+    private OrganizationRepository organizationRepository;
+    
+    public Organization createTestOrganization() {
+        return createTestOrganization("Test Organization");
     }
     
-    @Bean
-    @Primary
-    public PasswordEncoder testPasswordEncoder() {
-        return new BCryptPasswordEncoder(4); // Faster for tests
+    public Organization createTestOrganization(String name) {
+        Organization org = new Organization();
+        org.setName(name);
+        org.setSlug(SlugUtil.generateSlug(name));
+        org.setContactInformation(createContactInfo());
+        return organizationRepository.save(org);
     }
     
-    @EventListener
-    public void handleContextRefresh(ContextRefreshedEvent event) {
-        // Clear test data or perform setup
+    public Device createTestDevice(String organizationId) {
+        return DeviceTestDataBuilder.aDevice()
+            .withOrganizationId(organizationId)
+            .build();
+    }
+    
+    public List<Device> createMultipleDevices(String organizationId, int count) {
+        return IntStream.range(0, count)
+            .mapToObj(i -> createTestDevice(organizationId))
+            .map(deviceRepository::save)
+            .collect(Collectors.toList());
+    }
+    
+    public void cleanupTestData() {
+        deviceRepository.deleteAll();
+        organizationRepository.deleteAll();
+    }
+    
+    private ContactInformation createContactInfo() {
+        ContactInformation contact = new ContactInformation();
+        contact.setEmail("test@example.com");
+        contact.setPhone("+1-555-TEST");
+        return contact;
     }
 }
 ```
 
-## 📊 Running Tests
+## Running Tests
 
-### Maven Test Commands
+### Maven Commands
 
 ```bash
 # Run all tests
-mvn test
+./mvnw test
 
-# Run tests for specific module
-mvn test -pl openframe-api-lib
+# Run unit tests only
+./mvnw test -Dtest.profile=unit
 
-# Run only unit tests (exclude integration tests)
-mvn test -Dtest.profile=unit
-
-# Run only integration tests  
-mvn test -Dtest.profile=integration
-
-# Run tests with coverage report
-mvn test jacoco:report
-
-# Run tests in parallel (faster execution)
-mvn test -Dmaven.test.parallel=true
+# Run integration tests only
+./mvnw test -Dtest.profile=integration
 
 # Run specific test class
-mvn test -Dtest=DeviceServiceImplTest
+./mvnw test -Dtest=DeviceServiceTest
 
-# Run specific test method
-mvn test -Dtest=DeviceServiceImplTest#shouldFindDevicesWithFiltersSuccessfully
+# Run tests with coverage
+./mvnw test jacoco:report
 
-# Skip tests (for quick builds)
-mvn install -DskipTests
+# Run tests in parallel
+./mvnw test -DforkCount=4 -DreuseForks=true
 
-# Run tests with debug output
-mvn test -X
+# Skip tests during build
+./mvnw clean install -DskipTests
+
+# Run tests with specific profile
+./mvnw test -Dspring.profiles.active=test
 ```
 
-### Test Profiles
+### IDE Configuration
 
-Configure different test profiles in `application-test.yml`:
-
-```yaml
-# Test profile configuration
-spring:
-  profiles:
-    active: test
-    
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/openframe-test
-      
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-      
-  cache:
-    type: simple  # Use simple cache for tests
-
-# Logging for tests
-logging:
-  level:
-    com.openframe: DEBUG
-    org.springframework.test: INFO
-    
-# Test-specific configurations  
-openframe:
-  test:
-    data-initialization: true
-    mock-external-services: true
+**IntelliJ IDEA Test Configuration:**
+```text
+Run/Debug Configurations > JUnit
+- Test kind: All in package
+- Package: com.openframe
+- VM options: -Xmx1024m -Dspring.profiles.active=test
+- Environment variables: 
+  TESTCONTAINERS_REUSE_ENABLE=true
+  TESTCONTAINERS_RYUK_DISABLED=true
 ```
 
-## 📈 Test Coverage and Quality
+## Coverage and Quality
 
-### Coverage Requirements
-
-| Component | Target Coverage | Minimum Coverage |
-|-----------|----------------|------------------|
-| **Service Layer** | 90% | 80% |
-| **Repository Layer** | 85% | 75% |
-| **Controller Layer** | 80% | 70% |
-| **DTO Validation** | 95% | 90% |
-| **Utility Classes** | 95% | 85% |
-
-### Coverage Configuration
+### JaCoCo Coverage Configuration
 
 ```xml
-<!-- JaCoCo plugin configuration -->
 <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
@@ -606,7 +847,7 @@ openframe:
             <configuration>
                 <rules>
                     <rule>
-                        <element>PACKAGE</element>
+                        <element>BUNDLE</element>
                         <limits>
                             <limit>
                                 <counter>LINE</counter>
@@ -622,270 +863,237 @@ openframe:
 </plugin>
 ```
 
-### Generate Coverage Reports
+### SonarQube Integration
 
-```bash
-# Generate coverage report
-mvn clean test jacoco:report
-
-# View coverage report
-open target/site/jacoco/index.html
-
-# Generate coverage for all modules
-mvn clean test jacoco:report jacoco:report-aggregate
-
-# Check coverage thresholds
-mvn jacoco:check
+```xml
+<properties>
+    <sonar.coverage.jacoco.xmlReportPaths>
+        target/site/jacoco/jacoco.xml
+    </sonar.coverage.jacoco.xmlReportPaths>
+    <sonar.exclusions>
+        **/dto/**,
+        **/config/**,
+        **/Application.java
+    </sonar.exclusions>
+</properties>
 ```
 
-## 🔧 Test Configuration and Best Practices
+## Testing Best Practices
 
-### TestContainers Setup
+### 1. Test Naming Conventions
 
 ```java
-@Testcontainers
-public class BaseIntegrationTest {
-    
-    @Container
-    static MongoDBContainer mongoDBContainer = new MongoDBContainer("mongo:7")
-            .withExposedPorts(27017)
-            .withReuse(true);  // Reuse container across tests
-    
-    @Container 
-    static GenericContainer<?> redisContainer = new GenericContainer<>("redis:7-alpine")
-            .withExposedPorts(6379)
-            .withReuse(true);
-    
-    @DynamicPropertySource
-    static void configureProperties(DynamicPropertyRegistry registry) {
-        registry.add("spring.data.mongodb.uri", mongoDBContainer::getReplicaSetUrl);
-        registry.add("spring.redis.host", redisContainer::getHost);
-        registry.add("spring.redis.port", () -> redisContainer.getMappedPort(6379));
-    }
+// Good: Descriptive test names
+@Test
+@DisplayName("Should throw DeviceNotFoundException when device does not exist")
+void shouldThrowDeviceNotFoundExceptionWhenDeviceDoesNotExist() {
+    // Test implementation
+}
+
+// Alternative: BDD style
+@Test
+void givenNonExistentDeviceId_whenGetDevice_thenThrowDeviceNotFoundException() {
+    // Test implementation
 }
 ```
 
-### Testing Best Practices
-
-1. **Test Naming Conventions**
-   ```java
-   // Use descriptive test names
-   @Test
-   @DisplayName("Should return empty result when no devices match filters")
-   void shouldReturnEmptyResultWhenNoDevicesMatchFilters() { }
-   
-   // Use Given-When-Then structure
-   @Test
-   void shouldCalculateCorrectPagination() {
-       // Given
-       DeviceFilterInput input = createFilterInput();
-       
-       // When  
-       CountedGenericQueryResult<Device> result = service.findDevices(input);
-       
-       // Then
-       assertThat(result.getPageInfo()).isNotNull();
-   }
-   ```
-
-2. **Test Data Management**
-   ```java
-   @BeforeEach
-   void setUp() {
-       // Clean database before each test
-       deviceRepository.deleteAll();
-   }
-   
-   @AfterEach  
-   void tearDown() {
-       // Clean up test data
-       deviceRepository.deleteAll();
-   }
-   ```
-
-3. **Assertion Best Practices**
-   ```java
-   // Use AssertJ for fluent assertions
-   assertThat(result.getItems())
-       .hasSize(5)
-       .extracting(Device::getStatus)
-       .containsOnly(DeviceStatus.ONLINE);
-   
-   // Verify complex objects
-   assertThat(device)
-       .satisfies(d -> {
-           assertThat(d.getName()).isEqualTo("Expected Name");
-           assertThat(d.getStatus()).isEqualTo(DeviceStatus.ONLINE);
-           assertThat(d.getTags()).containsExactly("tag1", "tag2");
-       });
-   ```
-
-## ⚡ Performance Testing
-
-### Benchmark Tests with JMH
-
-```java
-@BenchmarkMode(Mode.AverageTime)
-@OutputTimeUnit(TimeUnit.MICROSECONDS)
-@State(Scope.Benchmark)
-public class PaginationBenchmark {
-    
-    private DeviceService deviceService;
-    private DeviceFilterInput filterInput;
-    
-    @Setup
-    public void setup() {
-        // Initialize service and test data
-        filterInput = DeviceFilterInput.builder()
-            .pagination(CursorPaginationInput.builder()
-                .limit(100)
-                .build())
-            .build();
-    }
-    
-    @Benchmark
-    public CountedGenericQueryResult<Device> benchmarkDeviceQuery() {
-        return deviceService.findDevices(filterInput);
-    }
-    
-    @Benchmark
-    public CountedGenericQueryResult<Device> benchmarkDeviceQueryWithFilters() {
-        DeviceFilterInput filterWithTags = filterInput.toBuilder()
-            .filters(DeviceFilters.builder()
-                .tags(Arrays.asList("production", "server"))
-                .build())
-            .build();
-        
-        return deviceService.findDevices(filterWithTags);
-    }
-}
-```
-
-### Load Testing
+### 2. Arrange-Act-Assert Pattern
 
 ```java
 @Test
-@Timeout(value = 5, unit = TimeUnit.SECONDS)
-void shouldHandleConcurrentRequests() throws InterruptedException {
-    int threadCount = 10;
-    int requestsPerThread = 100;
-    ExecutorService executor = Executors.newFixedThreadPool(threadCount);
-    CountDownLatch latch = new CountDownLatch(threadCount);
-    AtomicInteger successCount = new AtomicInteger(0);
-    AtomicInteger errorCount = new AtomicInteger(0);
+void shouldCreateDeviceSuccessfully() {
+    // Arrange
+    CreateDeviceRequest request = new CreateDeviceRequest();
+    request.setMachineId("test-machine");
+    request.setSerialNumber("TEST123");
     
-    for (int i = 0; i < threadCount; i++) {
-        executor.submit(() -> {
-            try {
-                for (int j = 0; j < requestsPerThread; j++) {
-                    try {
-                        CountedGenericQueryResult<Device> result = deviceService.findDevices(
-                            createValidDeviceFilterInput());
-                        if (result != null) {
-                            successCount.incrementAndGet();
-                        }
-                    } catch (Exception e) {
-                        errorCount.incrementAndGet();
-                    }
-                }
-            } finally {
-                latch.countDown();
-            }
-        });
+    when(deviceRepository.save(any(Device.class)))
+        .thenReturn(createSavedDevice());
+    
+    // Act
+    Device result = deviceService.createDevice(request);
+    
+    // Assert
+    assertThat(result).isNotNull();
+    assertThat(result.getMachineId()).isEqualTo("test-machine");
+    verify(deviceRepository).save(any(Device.class));
+}
+```
+
+### 3. Test Data Isolation
+
+```java
+@TestMethodOrder(OrderAnnotation.class)
+class DeviceIntegrationTest {
+    
+    @BeforeEach
+    void setUp() {
+        // Clean state before each test
+        deviceRepository.deleteAll();
     }
     
-    latch.await();
-    executor.shutdown();
-    
-    int totalRequests = threadCount * requestsPerThread;
-    assertThat(successCount.get()).isEqualTo(totalRequests);
-    assertThat(errorCount.get()).isZero();
+    @AfterEach
+    void tearDown() {
+        // Clean up after each test if needed
+        deviceRepository.deleteAll();
+    }
 }
 ```
 
-## 🚨 Troubleshooting Tests
+### 4. Mock vs Integration Testing
 
-### Common Issues and Solutions
-
-**Test Container Startup Issues**
-```bash
-# Check Docker daemon
-docker ps
-
-# Clean up test containers
-docker container prune -f
-
-# Restart Docker if needed
-# macOS: Docker Desktop -> Restart
-# Linux: sudo systemctl restart docker
-```
-
-**Database Test Issues**
-```bash
-# Clear test database
-mongo openframe-test --eval "db.dropDatabase()"
-
-# Reset test data
-mvn clean test -Dtest.reset.database=true
-```
-
-**Memory Issues During Tests**
-```bash
-# Increase memory for tests
-export MAVEN_OPTS="-Xmx2g -XX:MaxMetaspaceSize=512m"
-
-# Run tests with memory profiling
-mvn test -Dmaven.test.jvmargs="-Xmx2g -XX:+PrintGCDetails"
-```
-
-**Flaky Tests**
 ```java
-// Use @RepeatedTest for flaky tests
-@RepeatedTest(10)
-void shouldBeStable() {
-    // Test that should pass consistently
+// Unit test - Mock external dependencies
+@ExtendWith(MockitoExtension.class)
+class DeviceServiceTest {
+    @Mock private DeviceRepository deviceRepository;
+    @Mock private EventService eventService;
+    // Test service logic in isolation
 }
 
-// Add proper wait conditions
-@Test  
-void shouldWaitForAsyncOperation() {
-    // Trigger async operation
-    service.processAsync();
-    
-    // Wait for completion with timeout
-    await().atMost(5, SECONDS).until(() -> {
-        return service.isComplete();
-    });
+// Integration test - Test real interactions
+@SpringBootTest
+@Testcontainers
+class DeviceIntegrationTest {
+    @Autowired private DeviceService deviceService;
+    // Test with real database and dependencies
 }
 ```
 
-## 📋 Testing Checklist
+## Common Testing Patterns
 
-Before submitting code, ensure:
+### Testing Async Operations
 
-- [ ] **All new code has tests** (minimum coverage requirements met)
-- [ ] **Tests follow naming conventions** and have clear descriptions
-- [ ] **Integration tests cover happy and error paths**
-- [ ] **Performance tests validate critical operations**
-- [ ] **Test data is properly cleaned up**
-- [ ] **Tests are deterministic** (no flaky tests)
-- [ ] **Coverage report shows green** for all modified modules
+```java
+@Test
+void shouldProcessAsyncEvent() throws InterruptedException {
+    // Given
+    CountDownLatch latch = new CountDownLatch(1);
+    CompletableFuture<Void> future = eventProcessor.processEventAsync(event);
+    
+    // When
+    future.whenComplete((result, throwable) -> {
+        latch.countDown();
+    });
+    
+    // Then
+    assertThat(latch.await(5, TimeUnit.SECONDS)).isTrue();
+    verify(eventRepository).save(any(Event.class));
+}
+```
 
-## 🎯 Next Steps
+### Testing Security
 
-Now that you understand the testing approach:
+```java
+@Test
+@WithMockUser(authorities = "DEVICE_READ")
+void shouldAllowDeviceReadWithCorrectAuthority() {
+    // Test passes with proper authority
+}
 
-1. **[Run the Test Suite](../setup/local-development.md#step-6-run-tests)** - Execute tests locally
-2. **[Write Your First Test](../contributing/guidelines.md#writing-tests)** - Contribute new test coverage
-3. **[Review Testing Patterns](#testing-best-practices)** - Apply these patterns in your code
+@Test
+@WithMockUser(authorities = "OTHER_PERMISSION")
+void shouldDenyDeviceReadWithIncorrectAuthority() {
+    // Should throw AccessDeniedException
+    assertThrows(AccessDeniedException.class, () -> 
+        deviceController.getDevice("device-123"));
+}
+```
 
-## 📚 Additional Resources
+### Testing Pagination
 
-- **JUnit 5 User Guide**: [junit.org/junit5/docs/current/user-guide/](https://junit.org/junit5/docs/current/user-guide/)
-- **AssertJ Documentation**: [assertj.github.io/doc/](https://assertj.github.io/doc/)
-- **TestContainers**: [testcontainers.org/](https://www.testcontainers.org/)
-- **Spring Boot Testing**: [docs.spring.io/spring-boot/docs/current/reference/html/boot-features-testing.html](https://docs.spring.io/spring-boot/docs/current/reference/html/boot-features-testing.html)
+```java
+@Test
+void shouldReturnCorrectPaginationMetadata() {
+    // Given
+    createMultipleTestDevices(25);
+    CursorPaginationInput pagination = new CursorPaginationInput(10, null);
+    
+    // When
+    PageResponse<Device> result = deviceService.getDevices(pagination);
+    
+    // Then
+    assertThat(result.getData()).hasSize(10);
+    assertThat(result.getPagination().getHasNext()).isTrue();
+    assertThat(result.getPagination().getCursor()).isNotNull();
+    assertThat(result.getMeta().getTotal()).isEqualTo(25);
+}
+```
 
----
+## Continuous Integration
 
-**Testing is not just about finding bugs—it's about building confidence in your code and enabling fearless refactoring.** Happy testing! 🧪
+### GitHub Actions Workflow
+
+```yaml
+# .github/workflows/test.yml
+name: Tests
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    
+    services:
+      mongodb:
+        image: mongo:7.0
+        ports:
+          - 27017:27017
+      redis:
+        image: redis:7.0
+        ports:
+          - 6379:6379
+
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+    
+    - name: Cache Maven packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+    
+    - name: Run unit tests
+      run: ./mvnw test -Dtest.profile=unit
+    
+    - name: Run integration tests
+      run: ./mvnw test -Dtest.profile=integration
+      env:
+        MONGODB_URI: mongodb://localhost:27017/test_db
+        REDIS_HOST: localhost
+        REDIS_PORT: 6379
+    
+    - name: Generate test report
+      run: ./mvnw jacoco:report
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./target/site/jacoco/jacoco.xml
+```
+
+## Next Steps
+
+Now that you understand our testing approach:
+
+1. **[Contributing Guidelines](../contributing/guidelines.md)** - Learn how to contribute tests
+2. **[Code Quality Standards](./code-quality.md)** - Understand quality requirements
+3. **[Architecture Overview](../architecture/overview.md)** - See how testing fits into overall architecture
+
+## Resources
+
+- 📚 **Testing Documentation**: [Spring Boot Testing](https://spring.io/guides/gs/testing-web/)
+- 💬 **Community**: [OpenMSP Slack](https://join.slack.com/t/openmsp/shared_invite/zt-36bl7mx0h-3~U2nFH6nqHqoTPXMaHEHA)
+- 🚀 **Platform**: [OpenFrame.ai](https://openframe.ai)
+
+Build confidence in your code with comprehensive testing! 🧪
